# android-tv-date-time

./: .gitignore  README.md  README_EN.md  locales.py  pyinstaller.spec  pyproject.toml
.github/workflows/: build.yml  update-dependencies.yml
scripts/hooks/: macos_hook.py  win_hook.py
src/: android_time_fixer.py
